--- a/src/app/modules/home/components/todo-input-add-itens/todo-input-add-itens.component.html
+++ b/src/app/modules/home/components/todo-input-add-itens/todo-input-add-itens.component.html
@@ -1,1 +1,6 @@
-<p>todo-input-add-itens works!</p>
+<div class="add-task">
+  <input type="text" placeholder="Digite sua nova task aqui..." [(ngModel)]="addItemTaskList" (keyup.enter)="submitItemTaskList()">
+  <button (click)="submitItemTaskList()">
+    <img src="../../../../../assets/icons/icon-add.svg" alt="Adicionar task">
+  </button>
+</div>
