--- a/src/app/modules/home/components/todo-list/todo-list.component.html
+++ b/src/app/modules/home/components/todo-list/todo-list.component.html
@@ -1,1 +1,17 @@
-<p>todo-list works!</p>
+<section [ngClass]="{'loading': !taskList.length}">
+
+  <ul *ngIf="taskList.length">
+    <li *ngFor="let item of taskList; let i = index">
+      <input type="checkbox" [(ngModel)]="item.checked">
+      <input type="text" (keyup)="validationInput(item.task, i)" [(ngModel)]="item.task" [ngClass]="{'checked': item.checked }">
+
+      <button (click)="deleteItemTaskList(i)">
+        <img src="assets/icons/icon-trash.svg" alt="Excluir">
+      </button>
+    </li>
+  </ul>
+
+</section>
+
+<app-todo-input-add-itens (emitItemTaskList)="setEmitTaskList($event)"></app-todo-input-add-itens>
+<app-todo-button-delete-all (click)="deleteAllTaskList()" *ngIf="taskList.length"></app-todo-button-delete-all>
